@@ -122,6 +122,7 @@ Engine fixes:
 * Fix bug where new saves were the wrong class and couldn't attack when using a controller.
 * Fixed a case where replaced powers were not being enabled when switching equipment sets.
 * Item quantity menu now wraps around when using the increment/decrement buttons.
+* Fixed mod-specific default keybindings not loading when user resets configuration to default.
 * Android: Fix 'Flare' directory not being automatically created.
 * Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.
 
